@@ -5,9 +5,11 @@ version 2.0-rc0 11-Feb-2012
 . [NEW] Animation: Added new animation format that supports delays per frame
 . [NEW] LabelTTF: fontName and fontSize are properties
 . [NEW] LabelBMFont: added setFntFile method
+. [NEW] Sprite: spriteWithBatchNode / initWithBatchNode were removed. Use initWithTexture:batch.texture / spriteWithTexture:batch.texture instead
 . [FIX] DrawingPrimitives: drawColor4f() uses GLFloat instead of GLbyte (issue #1307)
 . [FIX] GLView: Fixed memory leak while dispatching events (Mac only)
 . [FIX] Particles: Fixed memory leak in fillWithEmptyQuadsFromIndex
+. [FIX] Sprite: adding family of sprites to a batchnode works as expected (issue #1217)
 . [FIX] SpriteBatch: Quad extensions are public
 . [FIX] Texture2D: initWithImage renamed with initWithCGImage
 . [FIX] Types: kCCResolutionStandard renamed to kCCResolutioniPhone
